# cpp_skeleton

./: main.cpp  meson.build
src/: meson.build
